# TFM_SVMIW

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
Document/: proyecto.tex
Document/apendices/: apendices.tex
Document/bibliografia/: bibliografia.bib
Document/capitulos/: 01_Introduccion.tex  02_Fundamentos_Teoricos.tex  03_Estado_del_arte.tex  04_Materiales.tex  05_Implementacion_y_Experimentos.tex  06_Conclusiones.tex
Document/config/: config.tex
Document/imagenes/chapter5/: mermaid.mmd
Document/portada/: portada.tex
Document/prefacios/: prefacio.tex
Presentation/: presentacion.tex  structure.sty
Presentation/bibliografia/: bibliografia.bib
Presentation/capitulos/: capitulo1.tex  capitulo2.tex  capitulo3.tex  capitulo4.tex  capitulo5.tex
Presentation/prefacio/: prefacio.tex
config/: cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml
data/: cameras.yaml
data/extrinsics/: cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml
data/intrinsics/: cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml
data/naive/: cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml
scripts/: README.md  calibrate.py  calibrate_camera.py  cut_video.py  estimate_height.py  extract_frames.py  extract_realsense_frames.py  filter-frames.py  filter_frames.py  tensorboard_to_latex.py  undistort_image.py
scripts/lib/: utils.py
